# Stupid-Management-System

./: .gitignore  CMakeLists.txt  Compatibility.h  Filter.c  Filter.h  GLOBAL.c  GLOBAL.h  LICENSE  LinkedList.c  LinkedList.h  Node.c  Node.h  NodeData.c  NodeData.h  README.md  Sorter.c  Sorter.h  Teacher.c  Teacher.h  TeacherManager.sln  TeacherManager.vcxproj  TeacherManager.vcxproj.filters  main.c  test.c
